--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "scrubs-traits",
   "version": "1.0.0",
   "description": "Traits for Scrubs",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --progress --colors --watch",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,16 @@
   "homepage": "https://github.com/dr-me/scrubs-traits#readme",
   "dependencies": {
     "scrubs-theme": "github:dr-me/scrubs-theme"
+  },
+  "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.2.2",
+    "eslint-plugin-flowtype": "^2.6.1",
+    "webpack": "^1.13.1"
   }
 }
