--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-plugin-flowtype": "^2.6.1",
+    "postcss-loader": "^0.9.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   }
 }
