--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "scrubs-traits",
   "version": "1.0.0",
   "description": "Traits for Scrubs",
-  "main": "dist/index.js",
+  "main": "index.js",
+  "style": "index.css",
   "scripts": {
-    "start": "webpack --progress --colors --watch",
     "build": "webpack -p"
   },
   "repository": {
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/dr-me/scrubs-traits#readme",
   "dependencies": {
-    "scrubs-theme": "github:dr-me/scrubs-theme"
+    "theme": "github:dr-me/theme"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
@@ -30,8 +30,11 @@
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-plugin-flowtype": "^2.6.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   }
 }
