--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "url": "https://github.com/dr-me/scrubs-traits/issues"
   },
   "homepage": "https://github.com/dr-me/scrubs-traits#readme",
-  "dependencies": {
-    "theme": "github:dr-me/theme"
-  },
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
@@ -33,6 +30,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "postcss-loader": "^0.9.1",
+    "scrubs-theme": "github:dr-me/scrubs-theme",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
